--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github final test</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- I'm trying to push a new repo in github.
