--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         <li><a href="#">About</a></li>
       </ul>
     </nav>
+    <div class="bg-img">
+      <h1>Welcome To New-design blog</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa deleniti
+        aliquam impedit sequi eaque sit consequuntur eos, fuga dolorem vero.
+      </p>
+    </div>
   </body>
 </html>
