--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa deleniti
         aliquam impedit sequi eaque sit consequuntur eos, fuga dolorem vero.
       </p>
+
+      <div class="btn">
+        <div class="more-btn">Explore more</div>
+        <div class="start-btn">Get Started</div>
+      </div>
     </div>
   </body>
 </html>
